src/test/resources/purescript_examples/failing/1881.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith ErrorParsingModule\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('foo')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)('\n')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSQualifiedImpl(Qualified)
                PSIdentifierImpl(identifier)
                  PsiElement(identifier)('bar')
                  PsiElement(whitespace)(' ')
            PsiElement(::)('::')
            PsiElement(whitespace)(' ')
            PSTypeImpl(Type)
              PSTypeAtomImpl(TypeAtom)
                PSTypeConstructorImpl(TypeConstructor)
                  PSQualifiedImpl(Qualified)
                    PSProperNameImpl(ProperName)
                      PsiElement(proper name)('Int')
                      PsiElement(whitespace)('\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('bar')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSNumericLiteralImpl(NumericLiteral)
              PsiElement(natural)('3')
              PsiElement(whitespace)('\n')
